force-app/main/default/objects/Activity/fields/Custom_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Custom_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Checkbox</label>
    <type>Checkbox</type>
</CustomField>