force-app/main/default/objects/Activity/fields/Custom_Currency__c.field-meta.xml
<CustomField>
    <fullName>Custom_Currency__c</fullName>
    <label>Custom Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>