force-app/main/default/objects/Activity/fields/Custom_Date__c.field-meta.xml
<CustomField>
    <fullName>Custom_Date__c</fullName>
    <label>Custom Date</label>
    <type>Date</type>
</CustomField>