force-app/main/default/objects/Activity/fields/Custom_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Custom_Picklist__c</fullName>
    <label>Custom Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>value 1</fullName>
                <default>true</default>
                <label>value 1</label>
            </value>
            <value>
                <fullName>value 2</fullName>
            </value>
            <value>
                <fullName>value 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>