force-app/main/default/objects/Activity/fields/Custom_Text__c.field-meta.xml
<CustomField>
    <fullName>Custom_Text__c</fullName>
    <label>Custom Text</label>
    <length>80</length>
    <type>Text</type>
</CustomField>